Fixed Navbar in Authentication App

--- a/authentication/templates/change_password.html
+++ b/authentication/templates/change_password.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% include 'navbar.html' %}
 
-<div class="min-h-screen bg-gradient-to-b from-[#2A3A30] to-[#254832] flex flex-col items-center py-10 mt-16">
+<div class="min-h-screen bg-gradient-to-r from-[#172810] to-[#102820] flex flex-col items-center py-40">
   <div class="bg-[#F3EAD8] shadow-lg rounded-lg p-8 w-full max-w-md">
     <h1 class="text-2xl font-bold text-[#B48125] mb-4 text-center">Change Password</h1>
     <form method="post" action="{% url 'change_password' %}">
