--- a/authentication/templates/user_profile.html
+++ b/authentication/templates/user_profile.html
@@ -8,7 +8,7 @@
 {% block content %}
 {% include 'navbar.html' %}
 
-<div class="min-h-screen bg-[#2A3A30] flex flex-col items-center py-10 mt-16">
+<div class="min-h-screen bg-gradient-to-r from-[#172810] to-[#102820] flex flex-col items-center py-40">
   <div class="container bg-[#F3EAD8] shadow-2xl rounded-2xl p-10 w-full max-w-4xl flex min-h-[450px]">
     <!-- Kolom Kiri: Foto dan Tombol Edit -->
     <div class="w-1/3 flex flex-col items-center justify-center mr-6">
