--- a/main/templates/main_admin.html
+++ b/main/templates/main_admin.html
@@ -64,7 +64,7 @@
   <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
 
   <div id="product_cards"></div>
-  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-black bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
     <div id="crudModalContent" class="relative bg-gray-200 rounded-[25px] shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
       <!-- Modal header -->
       <div class="flex items-center justify-between p-4 border-b rounded-t">
@@ -107,11 +107,6 @@
             </div>
             
             <div class="space-y-4">
-              <!-- Description -->
-              <div class="mb-4">
-                <label for="description" class="block text-sm font-medium text-gray-700 mb-2">Description</label>
-                <textarea id="description" name="description" rows="3" class="input-field" placeholder="Enter product description" required></textarea>
-              </div>
 
               <!-- Image -->
               <div class="mb-4">
@@ -148,7 +143,7 @@
       <!-- Modal footer -->
       <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
         <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-        <button type="submit" id="submitproduct" form="productForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+        <button type="submit" id="submitproduct" form="productForm" class="bg-[#8a6420] hover:bg-[#4d2d18] text-white font-bold py-2 px-4 rounded-lg">Save</button>
       </div>
     </div>
   </div>
