--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <!-- Background halaman -->
-  <body style="background-color: #102820; margin: 0; padding: 0;">
+  <body style="background-color: #2A3A30; margin: 0; padding: 0;">
 
 <!-- Menambahkan Google Fonts untuk Rosarivo -->
 <head>
