--- a/blog/templates/blog/my_articles.html
+++ b/blog/templates/blog/my_articles.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div style="background-color: #102820; padding: 40px 20px; min-height: 100vh;">
+<div style="background-color: #2A3A30; padding: 40px 20px; min-height: 100vh;">
   <!-- Header BFQ dan My BFQ Articles -->
   <div style="max-width: 1200px; margin: auto;">
     <h1 style="
