style: button styling

--- a/main/templates/main_admin.html
+++ b/main/templates/main_admin.html
@@ -56,7 +56,7 @@
     <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm rounded-md font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
       Add New Product
     </a>
-		<button data-modal-target="crudModal" data-modal-toggle="crudModal" class="text-white ml-4 px-3 py-2 rounded-md bg-[#8a6420] hover:bg-[#5c4215]" onclick="showModal()">
+		<button data-modal-target="crudModal" data-modal-toggle="crudModal" class="text-white ml-4 px-3 py-2 rounded-md bg-[#8a6420] hover:bg-[#5c4215] transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal()">
 			Add New Product by AJAX
 		</button>
   </div>  
