--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -66,5 +66,6 @@
     </div>
 </div>
 
+{% include "footer.html" %}
 <script src="{% static 'script/discussion.js' %}"></script>
 {% endblock content %}
