--- a/discussion/templates/discussion/response.html
+++ b/discussion/templates/discussion/response.html
@@ -75,5 +75,6 @@
     </div>
 </div>
 
+{% include "footer.html" %}
 <script src="{% static 'script/response.js' %}"></script>
 {% endblock content %}
